# bobirc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: api.rs  app.rs  config.rs  history.rs  main.rs  osc52.rs  sessions.rs  ui.rs
