[package]
name = "bobirc"
version = "0.3.3"
edition = "2021"
description = "mIRC-style TUI chat for OpenAI-compatible LLM APIs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
futures-util = "0.3"
chrono = { version = "0.4", features = ["clock"] }
pulldown-cmark = { version = "0.10", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
